fixed too big space between date and colected items

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -725,6 +725,9 @@ a.wiki-page:visited {
 
 span.cycle-data {
     text-align: center;
+}
+
+div>span.cycle-data {
     min-width: 100px;
     margin: 0 20px;
 }
